@@ -27,6 +27,28 @@ import static org.openrewrite.properties.Assertions.properties;
 @SuppressWarnings("UnusedProperty")
 class AddPropertyTest implements RewriteTest {
 
+    @DocumentExample
+    @Test
+    void newProperty() {
+        rewriteRun(
+          spec -> spec.recipe(new AddProperty(
+            "management.metrics.enable.process.files",
+            "true",
+            null,
+            null
+          )),
+          properties(
+            """
+              management=true
+              """,
+            """
+              management=true
+              management.metrics.enable.process.files=true
+              """
+          )
+        );
+    }
+
     @Test
     void emptyProperty() {
         rewriteRun(
@@ -72,28 +94,6 @@ class AddPropertyTest implements RewriteTest {
           )),
           properties(
             """
-              management.metrics.enable.process.files=true
-              """
-          )
-        );
-    }
-
-    @DocumentExample
-    @Test
-    void newProperty() {
-        rewriteRun(
-          spec -> spec.recipe(new AddProperty(
-            "management.metrics.enable.process.files",
-            "true",
-            null,
-            null
-          )),
-          properties(
-            """
-              management=true
-              """,
-            """
-              management=true
               management.metrics.enable.process.files=true
               """
           )
@@ -221,7 +221,7 @@ class AddPropertyTest implements RewriteTest {
               management.metrics.enable.process.files=true
               """,
             spec -> spec.afterRecipe(after -> {
-                Properties.Entry entry = (Properties.Entry) after.getContent().get(0);
+                Properties.Entry entry = (Properties.Entry) after.getContent().getFirst();
                 assertThat(entry.getValue().getText()).isEqualTo("true");
                 assertThat(entry.getValue().getSource()).isEqualTo("tr\\\n  ue");
             })
@@ -246,7 +246,8 @@ class AddPropertyTest implements RewriteTest {
               # sam
               com.sam=true
               com.zoe=true
-              """)
+              """
+          )
         );
     }
 
@@ -281,7 +282,8 @@ class AddPropertyTest implements RewriteTest {
               com.seb=true
               # zoe
               com.zoe=true
-              """)
+              """
+          )
         );
     }
 
@@ -302,7 +304,8 @@ class AddPropertyTest implements RewriteTest {
               com.amy=true
               # sam
               com.sam=true
-              """)
+              """
+          )
         );
     }
 }
